🏆 Competition Mode: Full bot rewrite with leaderboard tracking, project submission, forum engagement, and Twitter integration

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ build/
 *.tmp
 *.log
 *.out
+# Private deployment notes (for your eyes only)
+.github/.DEPLOYMENT_NOTES.sh
+.github/DEPLOYMENT_NOTES.md
+DEPLOYMENT_NOTES.sh
