Harden Colosseum audit + CI pre-submit guard

--- a/.github/workflows/continuous-bot.yml
+++ b/.github/workflows/continuous-bot.yml
@@ -24,10 +24,13 @@ jobs:
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
       
       - name: 📦 Install Dependencies
-        run: npm install
+        run: npm ci
+
+      - name: 🗂️ Prepare Runtime Directories
+        run: mkdir -p heliossynerga/data
       
       - name: 🔐 Setup Environment
         run: |
