--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"node heliossynerga/backend/bot.js\" \"live-server heliossynerga/dashboard --port 5500 --open\"",
     "install-deps": "npm install",
     "audit:colosseum": "node scripts/colosseum-audit.mjs",
-    "precheck:submit": "node scripts/pre-submit-check.mjs"
+    "precheck:submit": "node scripts/pre-submit-check.mjs",
+    "hotfix:project-fields": "node scripts/project-fields-hotfix.mjs"
   },
   "keywords": ["trading", "bot", "solana", "defi", "ai"],
   "author": "HeliosSynerga",
