--- a/.github/workflows/continuous-bot.yml
+++ b/.github/workflows/continuous-bot.yml
@@ -5,8 +5,6 @@ on:
     # Run every hour
     - cron: '0 * * * *'
   workflow_dispatch:
-  push:
-    branches: [ main ]
 
 concurrency:
   group: bot-run
@@ -46,11 +44,15 @@ jobs:
       - name: 🤖 Start Trading Bot
         run: |
           echo "🐉 Starting HeliosSynerga Bot..."
+          EXIT_CODE=0
           timeout 3300 node heliossynerga/backend/bot.js || EXIT_CODE=$?
-          if [ $EXIT_CODE -eq 124 ]; then
+          if [ "$EXIT_CODE" -eq 124 ]; then
             echo "⏱️ Bot completed cycle"
+          elif [ "$EXIT_CODE" -eq 0 ]; then
+            echo "✅ Bot exited cleanly"
           else
             echo "❌ Bot exited with code: $EXIT_CODE"
+            exit "$EXIT_CODE"
           fi
         env:
           COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY }}
