feat: add heartbeat visibility and Railway/public-link verification

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,10 @@ GH_TOKEN=ghp_...
 # Server Port
 PORT=4000
 
+# Public URLs (judge verification)
+LIVE_APP_LINK=https://your-live-demo-url
+LIVE_DEMO_URL=https://your-live-demo-url
+RAILWAY_PUBLIC_URL=https://your-railway-service.up.railway.app
+
 # Optional: ClawKey Device Configuration
 # CLAWKEY_DEVICE_ID=device_id_here
