--- a/.github/workflows/continuous-bot.yml
+++ b/.github/workflows/continuous-bot.yml
@@ -38,6 +38,9 @@ jobs:
           RAILWAY_API_KEY=${{ secrets.RAILWAY_API_KEY }}
           GH_TOKEN=${{ secrets.GH_TOKEN }}
           PORT=${{ secrets.PORT || '4000' }}
+          LIVE_APP_LINK=${{ vars.LIVE_APP_LINK }}
+          LIVE_DEMO_URL=${{ vars.LIVE_DEMO_URL }}
+          RAILWAY_PUBLIC_URL=${{ vars.RAILWAY_PUBLIC_URL }}
           EOF
           echo "✅ Environment configured"
       
@@ -60,3 +63,6 @@ jobs:
           RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           PORT: ${{ secrets.PORT || '4000' }}
+          LIVE_APP_LINK: ${{ vars.LIVE_APP_LINK }}
+          LIVE_DEMO_URL: ${{ vars.LIVE_DEMO_URL }}
+          RAILWAY_PUBLIC_URL: ${{ vars.RAILWAY_PUBLIC_URL }}
