--- a/.github/workflows/colosseum-audit.yml
+++ b/.github/workflows/colosseum-audit.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: 🔍 Run Colosseum Audit
         env:
-          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY }}
-          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY }}
+          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY || secrets.TRADING_API_KEY }}
+          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY || secrets.OPENAI_API_KEY }}
           RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
