--- a/.github/workflows/deploy-bot.yml
+++ b/.github/workflows/deploy-bot.yml
@@ -24,8 +24,8 @@ jobs:
       
       - name: 🔐 Create .env from Secrets
         env:
-          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY }}
-          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY }}
+          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY || secrets.TRADING_API_KEY }}
+          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY || secrets.OPENAI_API_KEY }}
           RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           PORT: ${{ secrets.PORT || '4000' }}
@@ -47,8 +47,8 @@ jobs:
       
       - name: 🤖 Run Bot
         env:
-          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY }}
-          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY }}
+          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY || secrets.TRADING_API_KEY }}
+          CHATGPT_KEY: ${{ secrets.CHATGPT_KEY || secrets.OPENAI_API_KEY }}
           RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           PORT: ${{ secrets.PORT || '4000' }}
