--- a/.github/workflows/update-colosseum.yml
+++ b/.github/workflows/update-colosseum.yml
@@ -30,6 +30,6 @@ jobs:
 
       - name: 🎯 Update /my-project Metadata
         env:
-          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY }}
+          COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY || secrets.TRADING_API_KEY }}
           LIVE_DEMO_URL: ${{ vars.LIVE_DEMO_URL }}
         run: npm run update-colosseum
