--- a/.github/workflows/project-fields-hotfix.yml
+++ b/.github/workflows/project-fields-hotfix.yml
@@ -31,6 +31,8 @@ jobs:
       - name: 🚑 Apply /my-project Field Hotfix
         env:
           COLOSSEUM_API_KEY: ${{ secrets.COLOSSEUM_API_KEY || secrets.TRADING_API_KEY }}
-          LIVE_APP_LINK: ${{ vars.LIVE_APP_LINK }}
+          LIVE_APP_LINK: ${{ vars.LIVE_APP_LINK || vars.LIVE_DEMO_URL || vars.RAILWAY_PUBLIC_URL || 'https://heliossynerga-production.up.railway.app' }}
+          LIVE_DEMO_URL: ${{ vars.LIVE_DEMO_URL || vars.LIVE_APP_LINK || vars.RAILWAY_PUBLIC_URL || 'https://heliossynerga-production.up.railway.app' }}
+          RAILWAY_PUBLIC_URL: ${{ vars.RAILWAY_PUBLIC_URL || vars.LIVE_DEMO_URL || vars.LIVE_APP_LINK || 'https://heliossynerga-production.up.railway.app' }}
           PRESENTATION_LINK: ${{ vars.PRESENTATION_LINK }}
         run: npm run hotfix:project-fields
