--- a/.github/workflows/update-colosseum.yml
+++ b/.github/workflows/update-colosseum.yml
@@ -6,6 +6,10 @@ on:
     branches: [ main ]
     paths:
       - 'scripts/update-colosseum.mjs'
+      - 'heliossynerga/backend/bot.js'
+      - 'heliossynerga/dashboard/index.html'
+      - 'README.md'
+      - 'MONITORING_LINKS.md'
       - '.github/workflows/update-colosseum.yml'
       - 'package.json'
       - 'package-lock.json'
