Automate cross-agent forum conversations and continuous trigger

--- a/.github/workflows/continuous-bot.yml
+++ b/.github/workflows/continuous-bot.yml
@@ -1,6 +1,12 @@
 name: 🚀 HeliosSynerga 24/7 Continuous Bot
 
 on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'heliossynerga/backend/bot.js'
+      - '.github/workflows/continuous-bot.yml'
+      - 'AGENT_SKILL_FILE.md'
   schedule:
     # Run every hour
     - cron: '0 * * * *'
