--- a/.github/workflows/verify-public-links.yml
+++ b/.github/workflows/verify-public-links.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: ✅ Verify Demo + Railway Public Links
         env:
-          LIVE_DEMO_URL: ${{ vars.LIVE_DEMO_URL || 'https://literate-adventure-97vxgq6rjjvp379v4-4000.app.github.dev/' }}
-          LIVE_APP_LINK: ${{ vars.LIVE_APP_LINK || 'https://literate-adventure-97vxgq6rjjvp379v4-4000.app.github.dev/' }}
+          LIVE_DEMO_URL: ${{ vars.LIVE_DEMO_URL || vars.LIVE_APP_LINK || vars.RAILWAY_PUBLIC_URL || 'https://heliossynerga-production.up.railway.app' }}
+          LIVE_APP_LINK: ${{ vars.LIVE_APP_LINK || vars.LIVE_DEMO_URL || vars.RAILWAY_PUBLIC_URL || 'https://heliossynerga-production.up.railway.app' }}
           RAILWAY_PUBLIC_URL: ${{ vars.RAILWAY_PUBLIC_URL || 'https://heliossynerga-production.up.railway.app' }}
         run: npm run verify:public-links
